--- a/app/globals.css
+++ b/app/globals.css
@@ -121,11 +121,11 @@ body {
 
   /* ---------------------- File Upload ---------------------- */
   .file-upload {
-    @apply text-12-regular flex cursor-pointer flex-col items-center justify-center gap-3 rounded-md border border-dashed border-dark-500 bg-dark-400 p-5;
+    @apply text-12-regular flex cursor-pointer flex-col items-center justify-center gap-3 rounded-[13px] border border-dashed border-blue-500 bg-blue-500 p-5 text-blue-700 transition duration-200 ease-in-out placeholder:text-blue-600 dark:border-dark-500 dark:bg-dark-400 dark:text-white;
   }
 
   .file-upload_label {
-    @apply flex flex-col justify-center gap-2 text-center text-dark-600;
+    @apply flex flex-col justify-center gap-2 text-center text-blue-600 dark:text-white;
   }
 
   /* ---------------------- Stat Card ---------------------- */
